mabger-meter/force-app/main/default/objects/Activity/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <length>15</length>
    <type>Text</type>
</CustomField>