mabger-meter/force-app/main/default/objects/Activity/fields/Consent_to_Email__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contact has verbally consented to receive emails</description>
    <inlineHelpText>Contact has verbally consented to receive emails</inlineHelpText>
    <label>Consent to Email</label>
    <type>Checkbox</type>
</CustomField>