mabger-meter/force-app/main/default/objects/Activity/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <inlineHelpText>The source system that supplied Salesforce with this record.</inlineHelpText>
    <label>Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>DBA</fullName>
            </value>
            <value>
                <fullName>FourthShift</fullName>
            </value>
            <value>
                <fullName>TDF</fullName>
            </value>
            <value>
                <fullName>Pivotal</fullName>
            </value>
            <value>
                <fullName>BPCS</fullName>
            </value>
            <value>
                <fullName>BigMachines</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>