mabger-meter/force-app/main/default/objects/Activity/fields/Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Dependencies__c</fullName>
    <description>Dependencies populated from training activities</description>
    <label>Dependencies</label>
    <length>10</length>
    <type>Text</type>
</CustomField>