mabger-meter/force-app/main/default/objects/Activity/fields/DM_T_External_ID__c.field-meta.xml
<CustomField>
    <fullName>DM_T_External_ID__c</fullName>
    <description>This will be the Opportunity ID since the Sales Process Opportunity has Tasks that are on each Opportunity record</description>
    <externalId>true</externalId>
    <label>DM_T_External_ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>