mabger-meter/force-app/main/default/objects/Activity/fields/Exclude_from_FCR__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_FCR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from FCR</label>
    <type>Checkbox</type>
</CustomField>