mabger-meter/force-app/main/default/objects/Activity/fields/Export_Approved__c.field-meta.xml
<CustomField>
    <fullName>Export_Approved__c</fullName>
    <label>Export Approved</label>
    <type>Date</type>
</CustomField>