mabger-meter/force-app/main/default/objects/Activity/fields/Export_Type__c.field-meta.xml
<CustomField>
    <fullName>Export_Type__c</fullName>
    <label>Export Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>