mabger-meter/force-app/main/default/objects/Activity/fields/Import_Approved__c.field-meta.xml
<CustomField>
    <fullName>Import_Approved__c</fullName>
    <label>Import Approved</label>
    <type>Date</type>
</CustomField>