mabger-meter/force-app/main/default/objects/Activity/fields/Interface_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Interface_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated from Training Activity</description>
    <label>Interface Analysis</label>
    <type>Checkbox</type>
</CustomField>