mabger-meter/force-app/main/default/objects/Activity/fields/Local_Requirements_Reviewed_and_Followed__c.field-meta.xml
<CustomField>
    <fullName>Local_Requirements_Reviewed_and_Followed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to confirm local health and safety requirements have been reviewed and followed for travel and visiting locations during COVID-19.  Beginning Sept. 2020.</description>
    <inlineHelpText>State and Local government health and safety requirements have been reviewed and were followed during travel.</inlineHelpText>
    <label>Local Requirements Reviewed and Followed</label>
    <type>Checkbox</type>
</CustomField>