mabger-meter/force-app/main/default/objects/Activity/fields/Number_of_Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_Open__c</fullName>
    <formula>IF(IsClosed, Close_Date__c-DATETIMEVALUE(CreatedDate), NOW()-DATETIMEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days Open</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>