mabger-meter/force-app/main/default/objects/Activity/fields/Number_of_Hours_Open__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hours_Open__c</fullName>
    <formula>Number_of_Days_Open__c * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Hours Open</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>