mabger-meter/force-app/main/default/objects/Activity/fields/Owner_2__c.field-meta.xml
<CustomField>
    <fullName>Owner_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>