mabger-meter/force-app/main/default/objects/Activity/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State Initials for state traveled to for Travel Tracking</description>
    <inlineHelpText>Enter State initials</inlineHelpText>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>