mabger-meter/force-app/main/default/objects/Activity/fields/Training_Time__c.field-meta.xml
<CustomField>
    <fullName>Training_Time__c</fullName>
    <description>Time Value</description>
    <inlineHelpText>Please enter time in HH:MM AM or HH:MM PM format</inlineHelpText>
    <label>Training Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>